<resources>
    <string name="app_name">Cinemapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_favorite_description">Agregar Favorito</string>
    <string name="hint_url_image">Url Imagen</string>
    <string name="hint_title">Titulo</string>
    <string name="hint_year">Anio</string>
    <string name="hint_duration">Duracion</string>
    <string name="hint_summary">Resumen</string>
    <string name="hint_genre">Genero</string>
    <string name="option_gallery">Galeria</string>
    <string name="option_camera">Camara</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password">Contrasenia</string>
    <string name="hint_login">Iniciar Sesion</string>
    <string name="nav_favorite_action">Favoritos</string>
    <string name="nav_discover_action">TopRated</string>
    <string name="nav_top_action">Discover</string>
    <string name="nav_menu_popular">Popular</string>
    <string name="nav_menu_upcoming">Estrenos</string>
    <string name="nav_menu_posters">Posters</string>
    <string name="nav_menu_link">Ir a sitio web</string>
    <string name="nav_menu_places">Complejos</string>
    <string name="nav_menu_candy">Dulceria</string>
    <string name="nav_menu_pokemon">Pokemon</string>
    <string name="short_favorites">Ir a favoritos</string>
    <string name="long_favorites">Ir a seccion favoritos</string>
</resources>