<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actionFavorites"
            android:icon="@drawable/ic_baseline_favorite"
            android:title="@string/nav_favorite_action" />
        <item
            android:id="@+id/actionTopRated"
            android:icon="@drawable/ic_baseline_thumb_up"
            android:visible="false"
            android:title="@string/nav_top_action" />
        <item
            android:id="@+id/actionDiscover"
            android:icon="@drawable/ic_baseline_trending_up"
            android:visible="false"
            android:title="@string/nav_discover_action" />
        <item
            android:id="@+id/actionPopular"
            android:icon="@drawable/ic_baseline_local_movies"
            android:title="@string/nav_menu_popular" />
        <item
            android:id="@+id/actionUpcoming"
            android:visible="false"
            android:icon="@drawable/ic_baseline_local_movies"
            android:title="@string/nav_menu_upcoming" />
        <item
            android:id="@+id/actionPosters"
            android:icon="@drawable/ic_image"
            android:title="@string/nav_menu_posters" />

        <item
            android:id="@+id/actionLink"
            android:icon="@drawable/ic_baseline_language"
            android:title="@string/nav_menu_link" />

        <item
            android:id="@+id/actionPlaces"
            android:icon="@drawable/ic_baseline_local_movies"
            android:title="@string/nav_menu_places" />

        <item
            android:id="@+id/actionCandy"
            android:icon="@drawable/ic_baseline_trending_up"
            android:title="@string/nav_menu_candy" />

        <item
            android:id="@+id/actionPokemon"
            android:icon="@drawable/ic_baseline_thumb_up"
            android:title="@string/nav_menu_pokemon" />

    </group>

</menu>